[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retrieval_graph"
version = "0.1.0"
authors = [
    { name = "Your Name" }
]
description = "Retrieval graph for conversational AI"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langchain-core",
    "langgraph>=0.2.6",
    "langchain-openai>=0.1.22",
    "langchain-elasticsearch>=0.2.2",
    "pinecone-client",
    "langchain-mongodb>=0.1.9",
    "langchain-milvus",
    "langchain-cohere>=0.2.4",
    "pytest",
    "pytest-asyncio"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
